# AutoImpTS

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  Results  Testing.cpp  Testing.h  autoimpts.py  caca.txt  cmake_install.cmake  create_tables.sql  draw_datasets.py  githubpass  githubpass.pub  main.cpp  parser.cpp  parser.h  plot_data_in.py  python_packages.txt  reduced_bench.cbp  run_commands.py  setup.sh  start_imputation_benchmarks.py
.cmake/api/v1/reply/: cache-v2-8023ec3d5cd873b12336.json  cmakeFiles-v1-05fb2e2231f34094f7d2.json  codemodel-v2-5943fc2da9deebeb2f0d.json  codemodel-v2-dbab335bebf548e1e440.json  index-2022-08-27T03-55-09-0041.json  index-2022-09-09T01-35-25-0091.json  target-reduced_bench-Debug-640be8937ec4decb3718.json  target-reduced_bench-Debug-b6d3a8f6f34055a5369f.json
Algebra/: Auxiliary.cpp  CentroidDecomposition.cpp  CentroidDecomposition.h  MissingBlock.hpp  RSVD.cpp  RSVD.h
Algorithms/: CDMissingValueRecovery.cpp  CDMissingValueRecovery.h  DynaMMo.cpp  GROUSE.cpp  GROUSE.h  IterativeSVD.cpp  IterativeSVD.h  NMFMissingValueRecovery.cpp  NMFMissingValueRecovery.h  ROSL.cpp  ROSL.h  SPIRIT.cpp  SPIRIT.h  ST_MVL.cpp  ST_MVL.h  SVT.cpp  SVT.h  SoftImpute.cpp  SoftImpute.h  TKCM.cpp  TKCM.h  trmfpy.py
Algorithms/AlgoCollection/Algebra/: MissingBlock.hpp
Algorithms/AlgoCollection/Algorithms/: IterativeSVD.cpp  IterativeSVD.h  NMFMissingValueRecovery.cpp  NMFMissingValueRecovery.h  ROSL.cpp  SVT.cpp  SVT.h  SoftImpute.cpp  SoftImpute.h  TKCM.cpp  TKCM.h
Algorithms/AlgoCollection/Performance/: Benchmark.cpp
Algorithms/AlgoCollection/_data/_technical/ST-MVL/: stmvl_equation.txt
Algorithms/OtherAlgorithms/trmf/data/in/: airq_m100_indic.txt  airq_m100_obs.txt  airq_m200_indic.txt  airq_m200_obs.txt  airq_m300_indic.txt  airq_m300_obs.txt  airq_m400_indic.txt  airq_m400_obs.txt  airq_m500_indic.txt  airq_m500_obs.txt  airq_m600_indic.txt  (+5 more)
AutoParam/: BayesOpt.cpp  BayesOpt.h  BayesOpt.py  SuccessiveHalving.cpp  SuccessiveHalving.h  plotSH.py  plot_compare.py  plot_csv.py  random_search.py  start_imputation_benchmarks.py  swarm_particle.py  ts_algorithms.py
BayesLogs/: cd_airq.json
Database/: SQL.cpp  SQL.h  SQLplot.py
Datasets/: README.md
Datasets/real_world/air_quality/: airq_normal.txt
Datasets/real_world/air_quality/raw/: aquci_test_trimmed.txt
Datasets/real_world/bafu/: bafu_normal_reduced.txt
Datasets/real_world/bafu/raw_matrices/: bafu_correlation.txt
Datasets/real_world/chlorine/: chlorine_normal.txt
Datasets/real_world/climate/: climate_normal.txt
Datasets/real_world/climate/matrices/: climate_normal_full.txt  climate_normal_orig.txt  climate_reordered_columns.txt
Datasets/real_world/climate/raw/: NA-1990-2002-Monthly.csv  climate.txt
Datasets/real_world/drift/: drift10_normal.txt
Datasets/real_world/electricity/: electricity_normal.txt
Datasets/real_world/meteo/: meteo_normal.txt
Datasets/real_world/meteo/raw_matrices/: meteo_total.txt  meteo_total_04-05.txt  meteo_total_05-08.txt  meteo_total_08-12.txt
Datasets/real_world/temp/: temp_normal.txt
Datasets/synthetic/: README.md
Graphs/: trmf_compare_results.txt  trmf_compare_results_airq.txt  trmf_compare_results_airq2.txt  trmf_compare_results_airq_bayes.txt  trmf_compare_results_chlorine.txt  trmf_compare_results_chlorine_bayes.txt  trmf_compare_results_drift10.txt
Graphs/store_data/: results_script.sh
MathIO/: CommandLine.hpp  MatrixReadWrite.cpp  MatrixReadWrite.h
Performance/: Benchmark.cpp  Benchmark.h  MisalignRedux.cpp  MisalignRedux.h
Scenarios/: MCAR.cpp  MCAR.h  MissingBlock.cpp  MissingBlock.h  Scenario.cpp  Scenario.h  ScenarioContext.cpp  ScenarioContext.h
Stats/: Correlation.cpp  Correlation.h
_data/BayesLogs/: cd_airq.json
_data/_technical/: latlong_placeholder.txt
_data/_technical/ST-MVL/: stmvl_equation.txt  stmvl_equation.txt_0  stmvl_equation.txt_1  stmvl_equation.txt_2  stmvl_equation.txt_3  stmvl_equation.txt_4  stmvl_equation.txt_5  stmvl_equation.txt_6  stmvl_equation.txt_7
_data/_technical/ST-MVL/TrainingFolder/: train_0.txt  train_1.txt  train_10.txt  train_11.txt  train_12.txt  train_13.txt  train_14.txt  train_15.txt  train_16.txt  train_17.txt  train_18.txt  train_19.txt  train_2.txt  train_20.txt  train_21.txt  train_22.txt  train_23.txt  train_24.txt  train_25.txt  train_26.txt  train_27.txt  train_28.txt  train_29.txt  train_3.txt  train_30.txt  train_31.txt  train_32.txt  train_33.txt  train_34.txt  train_35.txt  train_36.txt  train_37.txt  train_38.txt  train_39.txt  train_4.txt  train_40.txt  train_41.txt  train_42.txt  train_43.txt  train_44.txt  (+60 more)
include/: optionparser.h  parser.h  sqlite3.h
include/Algebra/: Auxiliary.h
include/Algorithms/: CDMissingValueRecovery.h  DynaMMo.h  ST_MVL.h  SoftImpute.h
include/Performance/: Benchmark.h  MisalignRedux.h
include/Scenarios/: MissingBlock.h  Scenario.h  ScenarioContext.h
src/: main.cpp  parser.cpp
src/Algebra/: Auxiliary.cpp  CentroidDecomposition.cpp  RSVD.cpp
src/Algorithms/: CDMissingValueRecovery.cpp  DynaMMo.cpp  GROUSE.cpp  IterativeSVD.cpp  NMFMissingValueRecovery.cpp  ROSL.cpp  SPIRIT.cpp  ST_MVL.cpp  SVT.cpp  SoftImpute.cpp  TKCM.cpp  trmf_compare.py
src/MathIO/: MatrixReadWrite.cpp
src/Performance/: Benchmark.cpp  MisalignRedux.cpp
src/Scenarios/: MCAR.cpp  MissingBlock.cpp  Scenario.cpp  ScenarioContext.cpp
src/Stats/: Correlation.cpp
(+58 files in other folders)
